# gitventory

./: .gitattributes  .gitignore  README.md  config.example.yaml  pyproject.toml
gitventory/: __init__.py  cli.py  config.py  registry.py  runner.py  scaffold.py
gitventory/adapters/: __init__.py  base.py
gitventory/adapters/github/: __init__.py  adapter.py  auth.py  client.py  mappers.py  workflow_parser.py
gitventory/adapters/static_yaml/: __init__.py  adapter.py  schema.py
gitventory/catalog/: __init__.py  matcher.py  schema.py  sync.py
gitventory/models/: __init__.py  base.py  catalog.py  cloud_account.py  deployment_mapping.py  ghas_alert.py  repo_collaborator.py  repo_team_assignment.py  repository.py  team.py  team_member.py  user.py
gitventory/output/: __init__.py  alerts.py  base.py  helpers.py  json_formatter.py  table_formatter.py
gitventory/ownership/: __init__.py  sync.py  team_enrichment.py  user_enrichment.py
gitventory/store/: __init__.py  base.py  json_store.py  query.py  sqlite.py
inventory/: aws_accounts.yaml  catalog.example.yaml  deployment_mappings.yaml  teams.yaml
schemas/: aws_accounts.schema.json  catalog.schema.json  config.schema.json  deployment_mappings.schema.json  teams.schema.json  users.schema.json
scripts/: generate_schemas.py
tests/integration/: test_sqlite_store.py
tests/unit/: test_catalog_matcher.py  test_catalog_schema.py  test_config.py  test_github_auth.py  test_github_client.py  test_models.py  test_ownership_sync.py  test_team_model.py
